--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@octokit/request": "^5.4.12",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -12,10 +13,22 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "dep-check": "depcheck",
+    "npm-check": "npm-check",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Team-Up-Dev/team-up-dev.github.io.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Team-Up-Dev/team-up-dev.github.io/issues"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +47,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://team-up-dev.github.io/",
+  "devDependencies": {
+    "depcheck": "^1.3.1",
+    "gh-pages": "^3.1.0",
+    "npm-check": "^5.9.2",
+    "source-map-explorer": "^2.5.1"
   }
 }
