--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "format": "prettier --write src/*",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "dep-check": "depcheck",
     "npm-check": "npm-check",
@@ -54,6 +55,7 @@
     "depcheck": "^1.3.1",
     "gh-pages": "^3.1.0",
     "npm-check": "^5.9.2",
+    "prettier": "2.2.1",
     "source-map-explorer": "^2.5.1"
   }
 }
