--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "format": "prettier --write src/*",
+    "prettier-watch": "onchange \"src/*\" \"public/*\" -- prettier --write --ignore-unknown {{changed}}",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "dep-check": "depcheck",
     "npm-check": "npm-check",
@@ -57,6 +58,7 @@
     "depcheck": "^1.3.1",
     "gh-pages": "^3.1.0",
     "npm-check": "^5.9.2",
+    "onchange": "^7.1.0",
     "prettier": "2.2.1",
     "source-map-explorer": "^2.5.1"
   }
