--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://team-up-dev.github.io/",
+  "homepage": "https://Fikriihsan03.github.io/team-up-dev.github.io",
   "devDependencies": {
     "depcheck": "^1.3.1",
     "gh-pages": "^3.1.0",
