--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -55,7 +54,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://Fikriihsan03.github.io/team-up-dev.github.io",
+  "homepage": "https://team-up-dev.github.io/",
   "devDependencies": {
     "depcheck": "^1.3.1",
     "gh-pages": "^3.1.0",
